--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-body{
-    background-color:  #E4F9F5;
+body {
+    background-color: #E4F9F5;
 }
 
-.img{
-    margin: 0 auto 0 auto
+.cmingimg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+
 }
